# book-manager

./: ._CLAUDE.md  .gitignore  CLAUDE-short.md  CLAUDE.md  book-manager-dev-rules (5).md  index.html
.claude/commands/: frontend-design.md
docs/: ._gas-rules.md  ._history.md  dev-team-prompts.md  history.md  orchestrator.md
investment/: index.html  pyproject.toml  server.py
mcp/: ._book-manager-mcp-setup.md  book-manager-mcp-setup.md  pyproject.toml  server.py
mystats/: index.html
obsidian-mcp/: pyproject.toml  server.py
tests/: README.md
